--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^1.8.0"
   }
 }
