--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/shared/components/ThumbNews/components/Icons/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
